# BioValidator

./: .env-dev  .gitignore  LICENSE  Makefile  README.md  config.py  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  germline_reference_parser.py  pyproject.toml
backend/: Dockerfile.api  Dockerfile.worker  pyproject.toml  ruff.toml
backend/api/: __init__.py  main.py  middlewares.py
backend/api/dependencies/: repositories.py  services.py  share.py
backend/api/events/: db.py
backend/api/routes/: metrics.py  reference.py  sample.py
backend/src/: config.py  entities.py  errors.py  logger.py
backend/src/db/: initdb.py  interceptors.py  models.py
backend/src/db/repositories/: metric.py  reference.py  sample.py
backend/src/molecular/: base.py  helpers.py
backend/src/molecular/germline/: prepare.py  validation.py  vcf2maf.py
backend/src/objstore/: base.py  file.py  paths.py  s3.py  samples.py
backend/src/services/: metric_sample.py  reference.py  sample.py
backend/src/worker/: helpers.py  main.py  setup.py  tasks.py
backend/tests/tests_unit/: conftest.py
backend/tests/tests_unit/compare/: test_diff.py
backend/tests/tests_unit/tests_services/: reference_service_test.py  samples_service_test.py
db/: db_interface.py  initdb.py  model.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
initdb/: init.sql
scripts/: add_reference.py  build.sh  deploy-all.sh  deploy.sh  pyproject.toml  vcf2maf.py
scripts/parsers/: germline.py
tools/: add_reference.py  add_sample.py  pyproject.toml
(+15 files in other folders)
