[tool.poetry]
name = "BioValidator"
version = "0.1.0"
description = ""
authors = ["Elizaveta Uvarova <“Elizaveta.Uvarova@bostongene.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"
boto3 = "^1.35.92"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
