[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "BioValidator scripts"
authors = ["Elizaveta Uvarova <“Elizaveta.Uvarova@bostongene.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
