[tool.poetry]
name = "tools"
version = "0.1.0"
description = "BioValidator tools"
authors = ["Elizaveta Uvarova <“Elizaveta.Uvarova@bostongene.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
